# SUDOKU

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  lib.rs
src/board/: canonicalization.rs  sudoku.rs
src/strategy/: solver.rs
